# conan-presentation

./: .gitignore  .gitmodules  README.md
0_container/: Containerfile  build.sh  run.sh
1_conan_new/: .gitignore  README.md
2_consume_dependency/: CMakeLists.txt  conanfile.py
2_consume_dependency/src/: main.cpp
3_build_requirements/: CMakeLists.txt  conanfile.py  test_input.json
3_build_requirements/proto/: configuration.proto
3_build_requirements/proto/network/: remote_endpoint.proto
3_build_requirements/src/: main.cpp
4_customize_dependency/: CMakeLists.txt  conanfile.py
4_customize_dependency/src/: main.cpp
5_conan_new_lib/: .gitignore
6_swp_log/: CMakeLists.txt  conanfile.py
6_swp_log/test_package/: CMakeLists.txt  conanfile.py
6_swp_log/test_package/src/: example.cpp
